--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@
     <link rel="apple-touch-icon" sizes="180x180" href=".../../src/assets/icon/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href=".../../src/assets/icon/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href=".../../src/assets/icon/favicon_io/favicon-16x16.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="manifest" href=".../../src/assets/icon/favicon_io/site.webmanifest">
-
+    
+    <!--Oswald font add-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-     href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Bebas+Neue&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
-     rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Bebas+Neue&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
 
 
+      <!--Oswald font add-->
     <title>Vite App</title>
   </head>
   <body>
