--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
   </body>
 </html>
