--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
       <!--Oswald font add-->
-    <title>Vite App</title>
+    <title>Dina Korean</title>
   </head>
   <body>
     <div id="app"></div>
